# ray-cast-game

./: .gitignore  .ninja_deps  .ninja_log  CMakeLists.txt  README.md  build.ninja  level  map.txt  map.wrld
.cache/clangd/index/: Availability.h.2ED23327A8C5DAB4.idx  AvailabilityInternal.h.0A9CD88C6ABA56CF.idx  AvailabilityInternalLegacy.h.E52E5D4C807041C3.idx  AvailabilityMacros.h.98C048329B6DD1E3.idx  AvailabilityVersions.h.460DA89FB279CC8D.idx  SDL.h.65782979A8315A3B.idx  SDL.h.D21F3113B9143F57.idx  SDL_assert.h.71951E8BDE6ECBD2.idx  SDL_assert.h.CF46EA81E6845F55.idx  SDL_atomic.h.650B5BF933810CF6.idx  SDL_atomic.h.7B5A7DB54D0EC021.idx  SDL_audio.h.1A968F636DBBAE90.idx  SDL_audio.h.21BF1B99B1F4F443.idx  SDL_blendmode.h.B70B84A7EAA24540.idx  SDL_blendmode.h.DA4DA7E2B7F9B211.idx  SDL_clipboard.h.9719E865EC2288A7.idx  SDL_clipboard.h.C20543AF2A0BEA83.idx  SDL_config.h.40AE62AABB020B1B.idx  SDL_config.h.F054191E7E554B3D.idx  SDL_cpuinfo.h.5D230F0314BB9CBE.idx  SDL_cpuinfo.h.FE566202877EFBEE.idx  SDL_endian.h.6EB1C2AA5F49B32E.idx  SDL_endian.h.C48AC320F726C3AA.idx  SDL_error.h.2BCE22D612296498.idx  SDL_error.h.6C4F4A21A6E76138.idx  SDL_events.h.2407608C3CE6B165.idx  SDL_events.h.8C6BC44A6CA568A2.idx  SDL_filesystem.h.6465AC8634AAA192.idx  SDL_filesystem.h.B5CD24FDA17E8B88.idx  (+252 more)
src/: defines.h  drugs.c  drugs.h  enemy.c  enemy.h  engine.  engine.c  engine.h  entity.c  entity.h  health.c  health.h  main.c  map.c  map.h  math.c  math.h  parse.c  parse.h  render.c  render.h  spawn.c  spawn.h  state.c  state.h  textures.c  textures.h  util.c  util.h
(+5 files in other folders)
